# dynamic-chart-builder

./: .env.sample  .gitignore  Dockerfile  README.md  To-Do.md  docker-compose.yml  pyproject.toml
config/: cache_utils.py  settings.py  urls.py
frontend/: .env.sample  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AggregateBox.tsx  ChartVisualization.tsx  CloseCallChart.tsx  CloseCallDetails.tsx  CloseCallFilter.tsx  CloseCallKpiSummary.tsx  CloseCallSummaryCards.tsx  DashboardFileUpload.tsx  DashboardFilter.tsx  DashboardFilterConstants.ts  DateRangePicker.tsx  FileUpload.tsx  NavBar.tsx  SafetyCharts.tsx  SafetyDashboard.tsx  SafetyDataTable.tsx  SafetyFilters.tsx  SafetySummaryCard.tsx  SumCard.tsx  SumCardProps.tsx
frontend/src/hooks/: useAggregateData.ts  useApp.ts  useChartData.ts  useChartOptions.ts  useCloseCallData.ts  useFileUpload.ts  useKPIPresets.ts  useNavigation.ts  useSafetyData.ts  (+1 more)
kpi/: filters.py  models.py  serializers.py  urls.py  views.py
kpi/common/: kpi_filters.py  pagination.py
kpi/migrations/: 0001_initial.py  0002_alter_detection_heading_alter_detection_object_class_and_more.py  0003_closecallevent.py  0004_detection_kpi_detecti_x_f40eaa_idx.py
kpi/serializers/: close_call_serializers.py  close_call_serializers_v2.py  safety_violation_serializers_v2.py
kpi/services/: aggregation_service.py  aggregation_service_v2.py  close_call_service.py  close_call_service_v2.py  safety_violation_service.py
kpi/views/: aggregation_views.py  close_call_views.py  safety_event_views.py
(+57 files in other folders)
